--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <script>
     window.addEventListener("DOMContentLoaded", async () => 
     {
-        await next2d.load("develop");
+        // await next2d.load("develop");
 
-        // const root = await next2d.createRootMovieClip(400, 400, 60, {
-        //     bgColor: "#0000ff"
-        // });
+        const root = await next2d.createRootMovieClip(400, 400, 60, {
+            bgColor: "#0000ff"
+        });
 
-        // const { Shape, BitmapData } = next2d.display;
+        const { Shape, BitmapData } = next2d.display;
         // const { TextField } = next2d.text;
         // const { Video } = next2d.media;
-        // const { Event } = next2d.events;
+        const { Event } = next2d.events;
         // const { Matrix } = next2d.geom;
         // const {
         //     BlurFilter,
@@ -33,48 +33,19 @@
         //     DisplacementMapFilter
         // } = next2d.filters;
 
-        // const image = new Image();
-        // image.addEventListener("load", () => 
-        // {
-        //     const bitmapData = new BitmapData();
-        //     bitmapData.image = image;
+        const shape = root.addChild(new Shape());
+        shape.x = 150;
+        shape.y = 150;
 
-        //     const shape = root.addChild(new Shape());
-        //     shape.x = 150;
-        //     shape.y = 150;
+        shape.addEventListener(Event.COMPLETE, () => 
+        {
+            shape.rotation = 190;
+            shape.scaleX = 0.25;
+            shape.scaleY = 0.25;
+            console.log(shape.rotation);
+        });
 
-        //     shape.addEventListener(Event.COMPLETE, () => 
-        //     {
-        //         shape.scaleX = 0.5;
-        //         shape.scaleY = 0.5;
-        //         shape.filters = [
-        //             // new BlurFilter(10, 10, 3),
-        //             // new DropShadowFilter(20, 45, 0, 0.5),
-        //             // new ColorMatrixFilter([
-        //             //     0.393, 0.769, 0.189, 0, 0,
-        //             //     0.349, 0.686, 0.168, 0, 0,
-        //             //     0.272, 0.534, 0.131, 0, 0,
-        //             //     0, 0, 0, 1, 0
-        //             // ]),
-        //             // new GlowFilter(0, 1, 30, 20, 1, 1),
-        //             // new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1),
-        //             // new GradientBevelFilter(80, 45, [0x0000ff, 0x00ff00, 0xff0000], [0, 0.5, 1], [0, 128, 255], 4, 4, 1, 1),
-        //             // new GradientGlowFilter(4, 45, [0x000000, 0xffffff], [0, 1], [0, 255], 4, 4, 1, 1),
-        //                 // new ConvolutionFilter(3, 3, [
-        //                 //     0, -0.25, 0,
-        //                 //     -0.25, 4, -0.25,
-        //                 //     0, -0.25, 0
-        //                 // ], 1, 3, false, false),
-        //             new DisplacementMapFilter(
-        //                 bitmapData.buffer, bitmapData.width, bitmapData.height, 40, 40,
-        //                 1, 4, 32, 32
-        //             )
-        //         ];
-        //     });
-
-        //     shape.src = "http://localhost:5173/json/image/logo.png";
-        // });
-        // image.src = "http://localhost:5173/json/image/image.png";
+        shape.src = "http://localhost:5173/json/image/logo.png";
 
         // const shape1 = root.addChild(new Shape());
         // shape1.x = 150;
